--- a/package.json
+++ b/package.json
@@ -1,31 +1,22 @@
 {
-  "name": "CORE19-08_quiz_express",
-  "version": "1.0.0",
-  "description": "CORE19-08_quiz_express",
-  "main": "main.js",
-  "scripts": {
-    "start": "node main.js",
-    "checks": "node tests/launcher.js",
-    "zip": "node tests/compress.js"
-  },
+  "name": "quiz-express",
+  "version": "0.0.0",
   "private": true,
-  "keywords": [
-    "CORE",
-    "QUIT"
-  ],
-  "author": "ging",
-  "license": "Unlicense",
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
-    "archiver": "^3.0.0",
-    "chai": "^4.1.2",
-    "express": "^4.16.4",
-    "express-generator": "^4.16.1",
+    "body-parser": "~1.18.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "ejs": "~2.5.7",
+    "express": "~4.16.0",
     "express-partials": "^0.3.0",
-    "fs-extra": "^6.0.1",
-    "mocha": "^5.2.0",
-    "sequelize": "^5.8.5",
-    "sqlite3": "^4.0.6",
-    "underscore": "^1.8.3",
-    "zombie": "^6.1.4"
+    "http-errors": "~1.6.2",
+    "method-override": "^2.3.10",
+    "morgan": "~1.9.0",
+    "sequelize": "^5.8.2",
+    "sqlite": "^3.0.3",
+    "supervisor": "^0.12.0"
   }
 }
